@@ -1,7 +1,8 @@
-AM_CPPFLAGS = -I$(top_srcdir)/Include
+AM_CPPFLAGS = -I$(top_srcdir)/Include @irisimage_CFLAGS@
 
 noinst_LTLIBRARIES = libbicpl_i.la
 libbicpl_i_la_SOURCES = \
                crop_image.c \
                rgb_io.c
 
+libbicpl_i_la_LIBADD = @irisimage_LIBS@
