@@ -5,13 +5,7 @@
 static  void  error_function(
     char  error[] );
 
-#ifdef  __sgi
-#if _MIPS_ISA == 1
-#define  HAVE_IMAGE_LIBRARY
-#endif
-#endif
-
-#ifdef  HAVE_IMAGE_LIBRARY
+#ifdef  HAVE_IMAGE_H
 #include <image.h>
 
 extern  unsigned short *ibufalloc(IMAGE *image);
@@ -36,7 +30,7 @@ public  Status  input_rgb_file(
     STRING          filename,
     pixels_struct   *pixels )
 {
-#ifdef  HAVE_IMAGE_LIBRARY
+#ifdef  HAVE_IMAGE_H
     IMAGE                 *iimage;
     int                   x_size, y_size, z_size;
     int                   x, y;
@@ -98,7 +92,7 @@ public  Status  output_rgb_file(
     STRING          filename,
     pixels_struct   *pixels )
 {
-#ifdef  HAVE_IMAGE_LIBRARY
+#ifdef  HAVE_IMAGE_H
     IMAGE                 *oimage;
     int                   x, y, n_components;
     Colour                col;
